# hsynth

./: .gitignore  .gitmodules  README.md  Setup.hs  flake.nix  hsynth-clap.def  hsynth.cabal
cbits/: clap_entry.c  plugin.c  runtime.c
lib/Audio/Clap/: Entry.hsc  EntryExport.hs  EntryImpl.hs  Factory.hsc  Plugin.hsc  Version.hsc
lib/Audio/Clap/Factory/: PluginFactory.hsc
lib/HSynth/: MIDI.hs  Synth.hs
lib/HSynth/CLAP/: Bindings.hs  Plugin.hs  Types.hs
src/: Export.hs  Main.hs  Plugin.hs
