cabal-version:   3.6
name:            hsynth
version:         0.1.0.0
synopsis:        A Haskell MIDI synthesizer
description:
  A Haskell analog synthesizer that can communicate with DAWs via CLAP

license:         BSD-3-Clause
author:          Shaun Sharples
maintainer:      shaun.sharples@gmail.com
category:        Audio
build-type:      Simple
extra-doc-files: CHANGELOG.md

common common
  ghc-options:      -Wall
  default-language: GHC2021

library
  import:             common
  hs-source-dirs:     lib
  exposed-modules:    Audio.Clap.Entry
  build-depends:      base ^>=4.19.0.0
  build-tool-depends: hsc2hs:hsc2hs

executable hsynth
  import:         common
  main-is:        Main.hs
  hs-source-dirs: src
  ghc-options:    -O -threaded -feager-blackholing
  build-depends:
    , base    ^>=4.19.0.0
    , hsynth
