cabal-version:   3.6
name:            hsynth
version:         0.1.0.0
synopsis:        A Haskell MIDI synthesizer
description:
  A Haskell analog synthesizer that can communicate with DAWs via CLAP

license:         BSD-3-Clause
author:          Shaun Sharples
maintainer:      shaun.sharples@gmail.com
category:        Audio
build-type:      Simple
extra-doc-files: CHANGELOG.md

common common
  ghc-options:      -Wall
  default-language: GHC2021

library
  import:             common
  hs-source-dirs:     lib
  exposed-modules:
    Audio.Clap.Entry
    Audio.Clap.Factory
    Audio.Clap.Version

  build-depends:      base ^>=4.19.0.0
  build-tool-depends: hsc2hs:hsc2hs

foreign-library hsynth-clap
  import:           common
  type:             native-shared
  lib-version-info: 0:1:0
  mod-def-file:

  if os(windows)
    options: standalone

  other-modules:    Export
  hs-source-dirs:   src
  c-sources:        cbits/plugin.c
  ghc-options:      -O2 -fPIC
  build-depends:
    , base    ^>=4.19.0.0
    , hsynth

executable hsynth-test
  import:         common
  main-is:        Main.hs
  other-modules:  Export
  hs-source-dirs: src
  ghc-options:    -O -threaded -feager-blackholing
  build-depends:
    , async       ^>=2.2.5
    , base        ^>=4.19.0.0
    , containers  ^>=0.6.7
    , hsynth
