cabal-version:   3.6
name:            hsynth
version:         0.1.0.0
synopsis:        A Haskell MIDI synthesizer
description:
  A Haskell analog synthesizer that can communicate with DAWs via CLAP

license:         BSD-3-Clause
author:          Shaun Sharples
maintainer:      shaun.sharples@gmail.com
category:        Audio
build-type:      Custom
extra-doc-files: CHANGELOG.md

custom-setup
  setup-depends:
    , base       >=4.11 && <5
    , Cabal      >=3.0
    , directory  >=1.3
    , filepath   >=1.4

common common
  ghc-options:      -Wall -O2 -fPIC
  default-language: GHC2021

library
  import:             common
  hs-source-dirs:     lib
  exposed-modules:
    Audio.Clap.Factory.PluginFactory
    Audio.Clap.Plugin
    Audio.Clap.Version

  build-depends:      base ^>=4.19.0.0
  build-tool-depends: hsc2hs:hsc2hs

foreign-library hsynth-clap
  import:         common
  type:           native-shared

  if !os(windows)
    lib-version-info: 0:0:0

  if os(windows)
    options: standalone

  hs-source-dirs: src
  other-modules:  Plugin
  c-sources:      cbits/clap_entry.c
  include-dirs:   vendor
  ghc-options:    -O2 -fPIC
  build-depends:
    , base    ^>=4.19.0.0
    , hsynth

-- executable hsynth-test
--   import:         common
--   main-is:        Main.hs
--   other-modules:  Export
--   hs-source-dirs: src
--   c-sources:      cbits/runtime.c
--   ghc-options:    -O -threaded -feager-blackholing
--   build-depends:
--     , async       ^>=2.2.5
--     , base        ^>=4.19.0.0
--     , containers  ^>=0.6.7
--     , hsynth
